# Deep-Learning-Driven-Virtual-Fashion-Fitting

./: .gitignore  Dockerfile  README.md  about_data.md  app.py  check_test_data.py  deploy_docker.py  deploy_huggingface.py  docker-compose.yml  download_models.py  evaluate.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_and_train.py  setup_model_structure.py  test_fixes.py  test_tryon.py  train.py
Data/: README.md
Pose/Simples/: img_00000001_pose_pose.json
docs/: repport_step_1.md  step1_data_processing.md
model/: note.md
models/: __init__.py  tryon_model.py  u2net.py
notebook/: 01_data_loader.ipynb  02_data_clearning.ipynb  03_data_labeling.ipynb  data_loader.ipynb
notebooks/: 1_human_parsing.ipynb  2_garment_generation.ipynb  3_vitrual_try_on.ipynb
preprocessing/: augment_and_update_annotation.py  clean_pose.py  config.py  data_augmentation.py  data_cleaning.py  data_labeling.py  data_loader.py  unzip.py
scripts/: split_images_and_poses.py  train_test_pairs.py
src/: __init__.py  run_garment_generation.py  run_human_parsing.py  run_virtual_tryon.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  garment_generator.py  human_parser.py  virtual_tryon.py
src/training/: __init__.py  losses.py  metrics.py  trainer.py
src/utils/: __init__.py  config.py  data_loader.py  image_processing.py  visualization.py
tryon/: forms.py  models.py  urls.py  views.py
utils/: download_process_dataset.py  resize_dataset.py
vfit/: asgi.py  settings.py  urls.py  wsgi.py
webapp/: manage.py
(+40 files in other folders)
