[project]
name = "virtual-fashion-fitting"
version = "0.1.0"
description = "README.md"
authors = [
    {name = "HASSANE SKIKRI",email = "hassaneskikri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
