[project]
name = "deep-learning-driven-virtual-fashion-fitting"
version = "0.1.0"
description = ""
authors = [
    {name = "HASSANE SKIKRI",email = "hassaneskikri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (==1.26.3)",
    "pandas (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "1"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
